--- a/game.html
+++ b/game.html
@@ -20,6 +20,7 @@
 			.stage1 {
 				position: absolute;
 				top: 0;
+				width: 27.5%;
 				height: 35%;
 				background: url('images/stages/stage_01.jpg') no-repeat;
 				background-size: contain;
