--- a/game.html
+++ b/game.html
@@ -20,8 +20,8 @@
 			.stage1 {
 				position: absolute;
 				top: 0;
-				width: 27.5%;
-				height: 35%;
+				width: 100%;
+				height: 330px;
 				background: url('images/stages/stage_01.jpg') no-repeat;
 				background-size: contain;
 				float:left;
